# stringly

./: Cargo.toml  README.md  build.rs  coverage.sh
iconv/: Cargo.toml
iconv/src/: main.rs
src/: big5.rs  cesu8.rs  cstr.rs  cstring.rs  encoding.rs  error.rs  euc_jp.rs  euc_kr.rs  eucjp.rs  gb18030.rs  iso2022jp.rs  iso_2022_jp.rs  iter.rs  lib.rs  pattern.rs  registry.rs  shift_jis.rs  str.rs  string.rs  utf16be.rs  utf16le.rs  utf32be.rs  utf32le.rs  utf7.rs  utf8.rs  utf_ebcdic.rs
src/codepages/: mod.rs
tests/: encodings.rs  std_compat.rs  str_string.rs
