[package]
name = "iconv"
version = "0.1.0"
edition = "2024"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
license = "Apache-2.0 OR MIT"
description = "iconv-compatible character encoding converter using stringly"

[[bin]]
name = "iconv"
path = "src/main.rs"

[dependencies]
stringly = { path = "..", features = ["unicode", "codepages", "registry"] }
